mobil menu align fix

--- a/src/assets/sass/layout/menu/_menu_common.scss
+++ b/src/assets/sass/layout/menu/_menu_common.scss
@@ -168,7 +168,7 @@
                     padding: 6px;
 
                     > a {
-                        padding: .75rem 1.25rem;
+                        padding: .75rem 1rem;
                     }
                 }
             }
